--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: oklch(100% 0.00011 271.152 / 0.87);
+  background-color: oklch(26.033% 0.00003 271.152);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -24,6 +24,13 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  text-shadow: oklch(0% 0 0 / 0.25) 0px 10px 30px;
+}
+
+h2 {
+  font-size: 2em;
+  margin: 0;
+  text-shadow: oklch(0% 0 0 / 0.25) 0px 4px 12px;
 }
 
 button {
@@ -38,7 +45,8 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  /* violet color */
+  border-color: oklch(43% 0.16 305);
 }
 button:focus,
 button:focus-visible {
@@ -51,6 +59,7 @@ button:focus-visible {
   align-items: center;
   gap: 32px;
   padding: 32px;
+  width: clamp(300px, 80vw, 1200px);
 }
 
 .neighbourhood {
@@ -59,6 +68,25 @@ button:focus-visible {
   align-items: center;
   gap: 24px;
 
+  .day-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    padding-bottom: 3em;
+
+    input {
+      width: 80px;
+      padding: 8px;
+      font-size: 1em;
+      border-radius: 8px;
+      border: 1px solid oklch(38.666% 0.00004 271.152);
+      background-color: oklch(21.779% 0.00002 271.152);
+      color: inherit;
+      text-align: center;
+    }
+  }
+
   .houses {
     display: flex;
     flex-wrap: wrap;
@@ -66,11 +94,26 @@ button:focus-visible {
     justify-content: center;
 
     .house {
-      border: 1px solid #444;
+      border: 1px solid oklch(38.666% 0.00004 271.152);
       border-radius: 8px;
       padding: 16px;
-      width: 200px;
-      background-color: #1a1a1a;
+      width: clamp(200px, 30vw, 300px);
+      background-color: oklch(21.779% 0.00002 271.152);
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+
+      h3 {
+        align-self: center;
+      }
+
+      button {
+        align-self: center;
+      }
+    }
+
+    .house.visited {
+      background-color: oklch(28.502% 0.00003 271.152);
     }
   }
 }
