--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,12 @@
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
+  padding: 2rem;
 }
 
 h1 {
@@ -57,9 +60,12 @@ button:focus-visible {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 32px;
   padding: 32px;
   width: clamp(300px, 80vw, 1200px);
+
+  outline: 1px solid teal;
 
   .neighbourhood {
     display: flex;
@@ -100,7 +106,7 @@ button:focus-visible {
         background-color: oklch(21.779% 0.00002 271.152);
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
 
         h3 {
           align-self: center;
@@ -108,6 +114,11 @@ button:focus-visible {
 
         button {
           align-self: center;
+        }
+
+        p {
+          margin: 0.25rem;
+          text-align: center;
         }
       }
 
